--- a/Ember/Mark1/app/components/header/nav-links/index.hbs
+++ b/Ember/Mark1/app/components/header/nav-links/index.hbs
@@ -1,4 +1,5 @@
 <nav id="headerNav" class="navLinks">
-    <Header::NavLinks::LinkItem @route="about" @text="About Us"/>
-    <Header::NavLinks::LinkItem @route="contact" @text="Contact Us"/>
+    <Header::NavLinks::LinkItem @data={{getRoute 'home'}} />
+    <Header::NavLinks::LinkItem @data={{getRoute 'about'}} />
+    <Header::NavLinks::LinkItem @data={{getRoute 'contact'}} />
 </nav>
