--- a/Ember/Mark1/app/components/header/nav-links/link-item/index.hbs
+++ b/Ember/Mark1/app/components/header/nav-links/link-item/index.hbs
@@ -1,1 +1,1 @@
-<LinkTo @route={{@route}}> {{@text}}</LinkTo> 
+<LinkTo class="marvel-bold" @route={{@data.route}}> {{getLang @data.langLabel}}</LinkTo> 
