--- a/Ember/Mark1/app/styles/app.css
+++ b/Ember/Mark1/app/styles/app.css
@@ -1,5 +1,3 @@
-/* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
-@import url(https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700,700italic);
 @import url('https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
@@ -13,15 +11,15 @@ h1,
 h2,
 h3,
 h4,
-h56
+h5,
 h6,
 p,
 div,
 span,
 a,
 button {
-  font-family: 'Lato', 'Open Sans', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Marvel", sans-serif;
+  font-style: normal;
 }
 
 body {
@@ -29,6 +27,7 @@ body {
   color:#fff;
   width:100vw;
   height:100vh;
+  padding: 0 2vw;
 }
 
 .arcReactorContainer{
@@ -41,15 +40,11 @@ body {
 
 .header{
   padding: 1vh 2vw;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
 }
 
-.marvel-regular,.marvel-bold {
-  font-family: "Marvel", sans-serif;
-  font-style: normal;
-}
 .marvel-regular {
   font-weight: 400;
 }
@@ -69,5 +64,5 @@ body {
 .navLinks a{
   text-decoration: none;
   color: #fff;
-  margin: 0px 5px;
+  margin: 0px 10px;
 }
