--- a/Ruby/Mark1/app/assets/stylesheets/application.css
+++ b/Ruby/Mark1/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+ *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+ }
+
+.bold{
+  font-weight: bold;
+}
+
+ .poppins-regular,.poppins-bold,.poppins-black,.poppins-regular-italic,.poppins-bold-italic,.poppins-black-italic {
+    font-family: "Poppins", sans-serif;
+  }
+  
+  .poppins-regular,.poppins-bold,.poppins-black {
+    font-style: normal;
+  }
+    
+  .poppins-regular-italic,.poppins-bold-italic,.poppins-black-italic {
+    font-style: italic;
+  }
+  
+  .poppins-regular {
+    font-weight: 300;
+  }
+  
+  .poppins-bold {
+    font-weight: 500;
+  }
+  
+  .poppins-black {
+    font-weight: 700;
+  }
+  
+  .poppins-regular-italic {
+    font-weight: 300;
+  }
+  
+  .poppins-bold-italic {
+    font-weight: 500;
+  }
+  
+  .poppins-black-italic {
+    font-weight: 700;
+  }
+  
+  .font40 {
+    font-size: 40px;
+  }
+
+  .font17 {
+    font-size: 17px;
+  }
